@@ -22,6 +22,8 @@ void init_options(struct ccx_s_options *options)
 	options->settings_608.force_rollup = 0;
 	options->settings_608.screens_to_process = -1;
 	options->settings_608.default_color = COL_TRANSPARENT; // Defaults to transparent/no-color.
+	options->is_608_enabled = 0;
+	options->is_708_enabled = 0;
 
 	options->extract = 1;		   // Extract 1st field only (primary language)
 	options->cc_channel = 1;	   // Channel we want to dump in srt mode
@@ -136,6 +138,7 @@ void init_options(struct ccx_s_options *options)
 	options->enc_cfg.all_services_charset = NULL;
 	options->enc_cfg.with_semaphore = 0;
 	options->enc_cfg.force_dropframe = 0; // Assume No Drop Frame for MCC Encode.
+	options->enc_cfg.extract_only_708 = 0;
 
 	options->settings_dtvcc.enabled = 0;
 	options->settings_dtvcc.active_services_count = 0;
